Remove "self_link_rel" and "up_link_rel" from IdentifiedObject and all database tables Close #71
Signed-off-by: Donald F. Coffin <dcoffin@greenbuttonalliance.org>